fix(nav-icon): Change absolute position to relative.
The nav icon has an absolute position, causing the text block to have only its font height, causing visual misalignment between icon and text. It was updated.

No breaking changes

--- a/ui/src/stylesheets/specific/navigation.scss
+++ b/ui/src/stylesheets/specific/navigation.scss
@@ -50,7 +50,7 @@
   height: var(--lg);
   width: var(--lg);
   left: calc(-1 * var(--lg) - var(--sm));
-  position: absolute;
+  position: relative;
 }
 
 .search > .input {
